<resources>
    <string name="app_name">TP1-EPSI-MSPR-App</string>
    <string name="map_icon">Map</string>
    <string name="camera_desc">description</string>
    <string name="cam">Identifier</string>
    <string name="acceuil">Acceuil</string>
    <string name="message">Message</string>
    <string name="plantes">Plantes</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usernameLabel">Nom d\'utilisateur</string>
    <string name="usernamHint">arasaje108</string>
    <string name="passwordLabel">Mot de passe</string>
    <string name="passwordHint">*********</string>
    <string name="btnLoginText">Se connecter</string>
    <string name="registerText">Créer un compte</string>
    <string name="title_activity_liste_botaniste">ListeBotanisteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_details_botaniste">DetailsBotanisteActivity</string>
    <string name="logout">Se déconnecter</string>
    <string name="delete_account">Supprimer le compte</string>
    <string name="edit_account">Modifier le compte</string>
    <string name="profile_image">image de profil</string>
    <string name="address">Address</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">Profile</string>


    <!--Bottom nav-->
    <string name="home">Home</string>
    <string name="following">Following</string>
    <string name="notification">Notifications</string>
    <string name="saved">Saved</string>


    <string name="hint_search">Search</string>
    <string name="all">All</string>
    <string name="recipes">Recipes</string>
    <string name="decor">Decor</string>
    <string name="fashion_inspiration">Fashion Inspiration</string>
    <string name="neha">Neha</string>
    <string name="show_followers_following_count">487 followers. 224 following</string>
    <string name="pins">Pins</string>
    <string name="followers">Followers</string>
    <string name="tried">Tried</string>
    <string name="boards">Boards</string>
    <string name="tables">Tables</string>
    <string name="myPlants">Mes Plantes</string>
    <string name="details1">details1</string>
    <string name="details2">details2</string>
    <string name="user_name">user_name</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="mesages">Messages</string>
    <string name="details">Details</string>
    <string name="annonces">Annonces</string>
    <string name="cgu">Conditions Générales d\'Utilisation (CGU) - A\'rosa-je \n 1.Introduction\n Les présentes Conditions Générales d\'Utilisation (CGU) régissent votre utilisation des services fournis par A\'rosa-je. Veuillez lire attentivement ces CGU avant d\'utiliser nos services. En utilisant nos services, vous acceptez d\'être lié par ces CGU.\n 2.Services Proposés\n 2.1 Conseils de Jardinage\n A\'rosa-je propose des services de conseils de jardinage destinés à fournir des informations, des recommandations et des astuces pour l\'entretien des jardins. Ces conseils sont basés sur des connaissances professionnelles et des bonnes pratiques en matière de jardinage.\n 2.2 Gardiennage de Particulier à Particulier\n A\'rosa-je propose également un système de gardiennage de particulier à particulier pour les propriétaires de jardins. Ce service permet de mettre en relation les propriétaires qui ont besoin d\'une personne de confiance pour entretenir leur jardin pendant leur absence avec des personnes qualifiées et disponibles pour assurer ce gardiennage.\n 3.Utilisation du Service\n 3.1 Inscription\n Pour accéder à certains services d\'A\'rosa-je, vous devrez peut-être vous inscrire et créer un compte. Vous acceptez de fournir des informations précises, complètes et à jour lors de votre inscription. Vous êtes responsable de maintenir la confidentialité de vos identifiants de connexion et de toutes les activités qui se produisent sous votre compte.\n 3.2 Utilisation Autorisée\n Vous acceptez d\'utiliser les services d\'A\'rosa-je conformément à ces CGU et à toutes les lois applicables. Vous ne pouvez pas utiliser nos services à des fins illégales, abusives, frauduleuses, nuisibles, obscènes ou d\'une manière qui enfreint les droits d\'autrui.\n 3.3 Responsabilités de l\'Utilisateur\n En utilisant nos services, vous reconnaissez et acceptez que vous êtes seul responsable de toutes les actions que vous entreprenez. Vous êtes responsable de votre propre jardinage et des arrangements que vous faites dans le cadre du système de gardiennage de particulier à particulier. A\'rosa-je ne peut être tenue responsable des conséquences découlant de votre utilisation des services.\n 4.Propriété Intellectuelle\n 4.1 Contenu de l\'Utilisateur\n En soumettant du contenu sur le site d\'A\'rosa-je, vous accordez à A\'rosa-je une licence mondiale, non exclusive, transférable, libre de redevances et pouvant être sous-licenciée pour utiliser, reproduire, modifier, adapter, publier, traduire, distribuer, afficher publiquement et créer des œuvres dérivées à partir de ce contenu, dans le cadre de la fourniture des services.\n 4.2 Droits de Propriété\n Le site d\'A\'rosa-je et tout son contenu, y compris mais sans s\'y limiter, les textes, les images, les logos, les marques commerciales, les graphiques et les vidéos, sont la propriété exclusive d\'A\'rosa-je ou de ses concédants de licence. Vous acceptez de ne pas utiliser, copier, reproduire, distribuer, transmettre, afficher publiquement, vendre, concéder sous licence ou exploiter de quelque manière que ce soit le contenu sans l\'autorisation écrite préalable d\'A\'rosa-je.\n 5.Limitation de Responsabilité\n Vous utilisez les services d\'A\'rosa-je à vos propres risques. A\'rosa-je ne garantit pas l\'exactitude, la fiabilité ou l\'exhaustivité des informations fournies dans le cadre de ses services. A\'rosa-je ne peut être tenue responsable des dommages directs, indirects, accessoires, spéciaux ou consécutifs résultant de l\'utilisation de ses services.\n 6.Modification des CGU\n A\'rosa-je se réserve le droit de modifier ces CGU à tout moment. Les modifications prendront effet dès leur publication sur le site d\'A\'rosa-je. Il vous incombe de consulter régulièrement les CGU pour vous tenir informé des éventuelles modifications. En continuant à utiliser les services après la publication des modifications, vous acceptez les CGU révisées.\n 7.Droit Applicable et Juridiction\n Ces CGU sont régies par les lois en vigueur dans votre pays de résidence. Tout litige découlant des présentes CGU sera soumis à la juridiction exclusive des tribunaux compétents de votre pays de résidence. Veuillez noter que cet exemple de CGU est fourni à titre informatif seulement et qu\'il est recommandé de consulter un professionnel du droit pour obtenir des conseils juridiques spécifiques à votre entreprise et à votre situation.</string>
    <string name="cr_er_une_demande_de_garde">Créer une demande de garde</string>
    <string name="cr_er_une_demande_de_garde_de_plante">Créer une demande de garde de plante</string>
    <string name="voir_mes_demandes_de_garde">Voir mes demandes de garde</string>
    <string name="type_your_message">Type your message...</string>
    <string name="mesConv">Mes conversations</string>
    <string name="compte">Compte</string>
    <string name="voir_les_demandes">Voir les demandes</string>

</resources>