<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tabAcceuil"
        android:icon="@drawable/ic_accueil_white"
        android:title="@string/acceuil" />

    <item
        android:id="@+id/tabMaps"
        android:icon="@drawable/ic_adresse_2_white"
        android:title="@string/map_icon" />

    <item
        android:id="@+id/tabCamera"
        android:icon="@drawable/ic_appareil_photo"
        android:title="@string/cam" />

    <item
        android:id="@+id/tabPlantes"
        android:icon="@drawable/ic_plante_en_pot_white"
        android:title="@string/plantes" />

    <item
        android:id="@+id/tabAnnonces"
        android:icon="@drawable/ic_utilisateur_white"
        android:title="@string/annonces" />


</menu>