<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.account.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="265dp"
            android:layout_height="238dp"
            android:contentDescription="Logo"
            android:src="@drawable/logo_base" />


        <TextView
            android:id="@+id/tv_username"
            style="@style/Theme.Base.TextView"
            android:text="@string/usernameLabel" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Theme.Base.EditText"
            android:hint="@string/usernamHint"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/Theme.Base.TextView"
            android:text="@string/passwordLabel" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Theme.Base.EditText"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/loginButton"
            style="@style/Theme.Base.Button"
            android:layout_width="371dp"
            android:layout_height="63dp"
            android:text="@string/btnLoginText" />

        <TextView
            android:id="@+id/createAccountTextView"
            style="@style/Theme.Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="fRegister_Click"
            android:text="@string/registerText"
            android:textStyle="normal|bold" />


    </LinearLayout>

</RelativeLayout>
